Binding form control to <select>

--- a/src/app/stock-inventory/containers/stock-inventory/stock-inventory.component.html
+++ b/src/app/stock-inventory/containers/stock-inventory/stock-inventory.component.html
@@ -4,7 +4,7 @@
          [parent]="form">
         </stock-branch>
         <stock-selector
-         [parent]="form">
+         [parent]="form" [products]="products" >
         </stock-selector>
         <stock-products
          [parent]="form">
@@ -17,5 +17,6 @@
             </button>
         </div>
         <pre>{{ form.value | json }}</pre>
+        <pre> Products: {{ products | json }}  </pre>
     </form>
 </div>
