--- a/src/app/stock-inventory/components/stock-selector/stock-selector.component.html
+++ b/src/app/stock-inventory/components/stock-selector/stock-selector.component.html
@@ -1,3 +1,21 @@
-<div [formGroup]="parent">
-   
+<div class="stock-selector" [formGroup]="parent">
+    <div formGroupName="selector">
+        <select formControlName="product_id">
+            <option value="">Select stock</option>
+            <option
+                *ngFor="let product of products"
+                [value]="product.id">
+                {{ product.name}}
+            </option>
+        </select>
+        <input
+            type="number"
+            step="10"
+            min="10"
+            max="1000"
+            formControlName="quantity">
+        <button type="button">
+            Add stock
+        </button>
+    </div>
 </div>
