--- a/src/app/stock-inventory/components/stock-selector/stock-selector.component.html
+++ b/src/app/stock-inventory/components/stock-selector/stock-selector.component.html
@@ -14,7 +14,9 @@
             min="10"
             max="1000"
             formControlName="quantity">
-        <button type="button">
+        <button 
+            type="button"
+            (click)="onAdd()">
             Add stock
         </button>
     </div>
