--- a/src/app/stock-inventory/containers/stock-inventory/stock-inventory.component.html
+++ b/src/app/stock-inventory/containers/stock-inventory/stock-inventory.component.html
@@ -4,7 +4,9 @@
          [parent]="form">
         </stock-branch>
         <stock-selector
-         [parent]="form" [products]="products" >
+         [parent]="form" 
+         [products]="products"
+         (added)="addStock($event)" >
         </stock-selector>
         <stock-products
          [parent]="form">
