Removing items from the FormArray

--- a/src/app/stock-inventory/containers/stock-inventory/stock-inventory.component.html
+++ b/src/app/stock-inventory/containers/stock-inventory/stock-inventory.component.html
@@ -9,7 +9,8 @@
          (added)="addStock($event)" >
         </stock-selector>
         <stock-products
-         [parent]="form">
+         [parent]="form"
+         (removed)="removeStock($event)">
         </stock-products>
         <div class="stock-inventory__buttons">
             <button
