--- a/src/app/stock-inventory/components/stock-products/stock-products.component.html
+++ b/src/app/stock-inventory/components/stock-products/stock-products.component.html
@@ -13,7 +13,9 @@
                     min="10"
                     max="1000"
                     formControlName="quantity">
-                <button type="button">
+                <button 
+                    type="button"
+                    (click)="onRemove(item, i)">
                     Remove
                 </button>
 
